Traefik-demo/01-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik-system
  labels:
    name: traefik-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: bookstore
  labels:
    name: bookstore
